# utils/swagger.json
@@ -202,6 +202,10 @@
 				"start": {
 					"type": "number",
 					"format": "double"
+				},
+				"sequence": {
+					"type": "number",
+					"format": "double"
 				}
 			},
 			"required": [
@@ -214,27 +218,28 @@
 				"resourceId",
 				"duration",
 				"capacity",
-				"start"
+				"start",
+				"sequence"
 			],
 			"type": "object",
 			"additionalProperties": true,
 			"example": {
 				"id": {
-					"value": "9641905c-8a4b-11eb-8dcd-0242ac130003"
+					"value": "d01ac8d3-b823-4f8d-9643-06c6b6d8fb13"
 				},
 				"name": "Name",
 				"description": "Description",
 				"recipeRequirementId": {
-					"value": "964192e6-8a4b-11eb-8dcd-0242ac130003"
+					"value": "93000dfb-11a7-4be4-91c0-57140564243c"
 				},
 				"tagId": {
-					"value": "964193e0-8a4b-11eb-8dcd-0242ac130003"
+					"value": "de1df70b-0794-4328-8118-c3462b694e67"
 				},
 				"recipeId": {
-					"value": "964194bc-8a4b-11eb-8dcd-0242ac130003"
+					"value": "8df24173-85fa-415c-ba66-668f65c05822"
 				},
 				"resourceId": {
-					"value": "9641958e-8a4b-11eb-8dcd-0242ac130003"
+					"value": "a9f0cb6a-e804-4782-bbed-b271619c4eff"
 				},
 				"duration": 0,
 				"capacity": 0,
@@ -243,7 +248,7 @@
 		},
 		"RecipeStepFilter": {
 			"properties": {
-				"RecipeIds": {
+				"recipeIds": {
 					"items": {
 						"$ref": "#/definitions/Guid"
 					},
@@ -256,7 +261,11 @@
 				}
 			},
 			"type": "object",
-			"additionalProperties": true
+			"additionalProperties": true,
+			"example": {
+				"RecipeIds": [],
+				"includeDeleted": false
+			}
 		},
 		"Tag": {
 			"properties": {
